--- a/vignettes/Tutorials.Rmd
+++ b/vignettes/Tutorials.Rmd
@@ -123,7 +123,7 @@ ggplot(A_estimate_value_plot, aes(Var1, Var2, fill = z)) +
 In this section, we demonstrate how to use our software to obtain $p$-values and confidence intervals for the difference in means of connected components 1 and 3.
 
 Recall that for a given $\hat\tau_j$, our proposed $p$-value for testing the null hypothesis $H_0: \nu^\top \beta = 0$ can be expressed as 
-$\mathbb{P}\left(|\phi| \geq |\nu^\top y| \;\middle|\; \phi \in \mathcal{S}_{C_1,C_2},$
+$\mathbb{P}\left(|\phi| \geq |\nu^\top y| \;\middle|\; \phi \in \mathcal{S}_{C_1,C_2}\right),$
 where $\mathcal{S}_{C_1,C_2}$ is the set of values $\phi$ such that performing the graph fused lasso on the perturbed dataset $y'(\phi)$ leads to a set of connected components that include $\hat{C}_1$ and $\hat{C}_2$ (see details in the [technical details section](https://yiqunchen.github.io/PGInference/articles/technical_details.html)). 
 
 The code below demonstrates how to use the function `fusedlasso_inf`, which estimates the connected components with $K$-step dual-path algorithm *and* performs inference on the specified two connected components based on the input data. After performing inference with $K=13$ in this example, we use the `summary` method to get a summary (in the form of a data frame) of the results.
@@ -134,35 +134,8 @@ compute_ci = TRUE)
 summary(result_demo)
 ```
 
-We see that because $p_{Hyun}$ conditions on too much information, its power is extremely low, so that the null hypothesis cannot be rejected. By contrast, $p_{C_1,C_2}$ can easily this null hypothesis.
-
+We see that because $p_{Hyun}$ conditions on too much information, its power is extremely low, and the null hypothesis cannot be rejected at level 0.05 ($p_{Hyun}=0.25$). By contrast, $p_{C_1,C_2}$ can easily this null hypothesis ($p_{C_1,C_2}<0.001$).
 
 ### Miscellaneous functions
-In addition to the aforementioned key functions, the package also includes the following helper functions: `construct_v` and `estimate_spike_by_firing_rate`.
-
-#### construct_v
-The function `construct_v` generates the contrast vector $\nu$ for the null hypothesis $H_0:\nu^\top c = 0$. We will demonstrate below that $\nu^\top c$ is indeed the change in calcium in the neighborhood of a given spike $\hat\tau_j$. We consider the case where there is no spike, i.e., the calcium is decaying exponentially, and we would expect $\nu^\top c=0$. In the example below, we set $c_1 = 3$, $c_t = 0.98 c_{t-1}, \; t=2,\ldots, 50$, $\hat\tau_j = 20$, and $h=5$.
-
-```{r}
-gam <- 0.98
-T_length <- 50
-calcium <- rep(3 * gam ^(0:(T_length - 1)))
-thj <- 20
-h <- 5
-```
-We see that $\nu^\top c$ indeed evaluates to 0, up to machine precision.
-
-#### estimate_spike_by_firing_rate
-
-We have taken $\lambda$ to be known in this tutorial. Choosing an appropriate $\lambda$ value is critical to the quality of estimated spikes. The function  `estimate_spike_by_firing_rate` allows us to specify a target firing rate, and then to find the value of $\lambda$ that yields a number of estimated spikes that is close to that target firing rate.
-
-In the example below, we simulate from an AR-1 model with firing rate 0.05, i.e., we expect to have 5 spikes per 100 timesteps on average.
-```{r}
-gam <- 0.98
-T_length <- 1000
-firing_rate <- 0.05
-target_rate <- 0.05
-sigma <- 0.1
-
-```
-
+In addition to the aforementioned key functions, the package also includes the following helper functions: 
+TBA
