--- a/vignettes/real_data_example.Rmd
+++ b/vignettes/real_data_example.Rmd
@@ -17,15 +17,20 @@ In this tutorial, we demonstrate how to apply the functions in the `SpikeInferen
 
 First we load the package and read in data from GitHub:
 ```{r}
+library(spdep)
+require(maps)
+require(maptools)
+require(RColorBrewer)
+library(latex2exp)
+require(PGInference)
 require(SpikeInference)
 require(RCurl)
 require(ggplot2)
 require(latex2exp)
 require(scales)
 require(dplyr)
-consistent_color <- scales::hue_pal()(8)
 
-
+#link_drug <- 
 link_calcium <- getURL("https://raw.githubusercontent.com/yiqunchen/SpikeInference-experiments/main/input_files/7.train.calcium.csv")
 calcium_1 <- read.csv(text = link_calcium)
 link_spike <- getURL("https://raw.githubusercontent.com/yiqunchen/SpikeInference-experiments/main/input_files/7.train.spikes.csv")
