--- a/vignettes/technical_details.Rmd
+++ b/vignettes/technical_details.Rmd
@@ -85,7 +85,7 @@ Our software also allows for the following extensions:
 
 ### References
 
-Chen YT, Jewell SW, Witten DM. (2021+) More powerful selective inference for the graph fused lasso
+Chen YT, Jewell SW, Witten DM. (2021+) More powerful selective inference for the graph fused lasso. arXiv preprint. https://arxiv.org/abs/2109.10451.
 
 Fithian W, Sun D, Taylor J. (2014) Optimal Inference After Model Selection. arXiv:1410.2597 [mathST]. 
 
