--- a/vignettes/technical_details.Rmd
+++ b/vignettes/technical_details.Rmd
@@ -85,13 +85,13 @@ Our software also allows for the following extensions:
 
 ### References
 
-Chen YT, Jewell SW, Witten DM. (2021+) More powerful selective inference for the graph fused lasso. arXiv preprint. https://arxiv.org/abs/2109.10451.
+Chen YT, Jewell SW, Witten DM. (2022+) More powerful selective inference for the graph fused lasso. arXiv preprint. https://arxiv.org/abs/2109.10451.
 
 Fithian W, Sun D, Taylor J. (2014) Optimal Inference After Model Selection. arXiv:1410.2597 [mathST]. 
 
 Hyun S, G’Sell M, Tibshirani RJ. (2018) Exact post-selection inference for the generalized lasso path. Electron J Stat.
 
-Jewell SW, Fearnhead P, Witten DM. Testing for a Change in Mean After Changepoint Detection. arXiv [statME]. http://arxiv.org/abs/1910.04291
+Jewell SW, Fearnhead P, Witten DM. Testing for a Change in Mean After Changepoint Detection. To appear in JRSSB.
 
 Lee J, Sun D, Sun Y, Taylor J. Exact post-selection inference, with application to the lasso. Ann Stat. 2016;44(3):907-927. doi:10.1214/15-AOS1371
 
